Write a couple of sentences

--- a/thesis/abstract.tex
+++ b/thesis/abstract.tex
@@ -16,7 +16,7 @@
   automatic differentiation or dependency analysis.
 
   The second part of the thesis describes the application of this graph tracking system to
-  probabilistic programs written for Turing, a probabilistic programming system implemented as an
+  probabilistic programs written for \turingjl, a probabilistic programming system implemented as an
   embedded language within Julia.  Through this, an executed Turing model can be analyzed, and the
   dependency structure of involved random variables be extracted from it.  Given this structure,
   analytical Gibbs conditionals can be calculated for a large set of models and passed to Turing's
