--- a/thesis/automatic_graph_tracking.tex
+++ b/thesis/automatic_graph_tracking.tex
@@ -5,7 +5,8 @@
 \section{Automatic Graph Tracking and Extended Wengert Lists}
 \label{sec:autom-graph-track}
 
-
+\section{Evaluation}
+\label{sec:irtracker-eval}
 
 %%% Local Variables: 
 %%% TeX-master: "main"
