--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -217,6 +217,11 @@
 
 \newcommand{\iid}{i.i.d.}
 
+\newcommand{\juliapackage}[1]{\texttt{#1}}
+\newcommand{\turingjl}{\juliapackage{Turing.jl}}
+\newcommand{\irtrackerjl}{\juliapackage{IRTracker.jl}}
+\newcommand{\autogibbsjl}{\juliapackage{AutoGibbs.jl}}
+
 
 %-------------------------------------------------------------------------------
 % DOCUMENT
