--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -57,7 +57,7 @@
   number = {153}
 }
 
-@article{baydin2019etalumis,
+@online{baydin2019etalumis,
   title = {Etalumis: {{Bringing Probabilistic Programming}} to {{Scientific Simulators}} at {{Scale}}},
   shorttitle = {Etalumis},
   author = {Baydin, Atılım Güneş and Shao, Lei and Bhimji, Wahid and Heinrich, Lukas and Meadows, Lawrence and Liu, Jialin and Munk, Andreas and Naderiparizi, Saeid and Gram-Hansen, Bradley and Louppe, Gilles and Ma, Mingfei and Zhao, Xiaohui and Torr, Philip and Lee, Victor and Cranmer, Kyle and Prabhat and Wood, Frank},
@@ -72,7 +72,7 @@
   primaryClass = {cs, stat}
 }
 
-@article{bernstein2020differentiating,
+@online{bernstein2020differentiating,
   title = {Differentiating a {{Tensor Language}}},
   author = {Bernstein, Gilbert and Mara, Michael and Li, Tzu-Mao and Maclaurin, Dougal and Ragan-Kelley, Jonathan},
   date = {2020-08-25},
@@ -142,7 +142,7 @@
   number = {1}
 }
 
-@article{bingham2018pyro,
+@online{bingham2018pyro,
   title = {Pyro: {{Deep Universal Probabilistic Programming}}},
   shorttitle = {Pyro},
   author = {Bingham, Eli and Chen, Jonathan P. and Jankowiak, Martin and Obermeyer, Fritz and Pradhan, Neeraj and Karaletsos, Theofanis and Singh, Rohit and Szerlip, Paul and Horsfall, Paul and Goodman, Noah D.},
@@ -169,7 +169,7 @@
   type = {Presentation}
 }
 
-@article{carpenter2015stan,
+@online{carpenter2015stan,
   title = {The {{Stan Math Library}}: {{Reverse}}-{{Mode Automatic Differentiation}} in {{C}}++},
   shorttitle = {The {{Stan Math Library}}},
   author = {Carpenter, Bob and Hoffman, Matthew D. and Brubaker, Marcus and Lee, Daniel and Li, Peter and Betancourt, Michael},
@@ -219,7 +219,7 @@
   type = {PhD Thesis}
 }
 
-@article{dahlin2015getting,
+@online{dahlin2015getting,
   title = {Getting {{Started}} with {{Particle Metropolis}}-{{Hastings}} for {{Inference}} in {{Nonlinear Dynamical Models}}},
   author = {Dahlin, Johan and Schön, Thomas B.},
   date = {2015-11-05},
@@ -248,7 +248,7 @@
   langid = {english}
 }
 
-@article{elliott2018simple,
+@online{elliott2018simple,
   title = {The Simple Essence of Automatic Differentiation},
   author = {Elliott, Conal},
   date = {2018-04-02},
@@ -363,7 +363,7 @@
   langid = {english}
 }
 
-@article{goodman2012church,
+@online{goodman2012church,
   title = {Church: A Language for Generative Models},
   shorttitle = {Church},
   author = {Goodman, Noah D. and Mansinghka, Vikash and Roy, Daniel M. and Bonawitz, Keith and Tenenbaum, Joshua B.},
@@ -411,7 +411,7 @@
   pagetotal = {438}
 }
 
-@article{grosse2014testing,
+@online{grosse2014testing,
   title = {Testing {{MCMC}} Code},
   author = {Grosse, Roger B. and Duvenaud, David K.},
   date = {2014-12-16},
@@ -425,7 +425,7 @@
   primaryClass = {cs, stat}
 }
 
-@article{heunen2017convenient,
+@online{heunen2017convenient,
   title = {A {{Convenient Category}} for {{Higher}}-{{Order Probability Theory}}},
   author = {Heunen, Chris and Kammar, Ohad and Staton, Sam and Yang, Hongseok},
   date = {2017-01-10},
@@ -451,7 +451,7 @@
   series = {Cambridge {{Series}} in {{Statistical}} and {{Probabilistic Mathematics}}}
 }
 
-@article{hoffman2018autoconj,
+@online{hoffman2018autoconj,
   title = {Autoconj: {{Recognizing}} and {{Exploiting Conjugacy Without}} a {{Domain}}-{{Specific Language}}},
   shorttitle = {Autoconj},
   author = {Hoffman, Matthew D. and Johnson, Matthew J. and Tran, Dustin},
@@ -483,7 +483,7 @@
   eventtitle = {2018 {{LLVM Developers}}' {{Meeting}}}
 }
 
-@article{innes2018don,
+@online{innes2018don,
   title = {Don't {{Unroll Adjoint}}: {{Differentiating SSA}}-{{Form Programs}}},
   shorttitle = {Don't {{Unroll Adjoint}}},
   author = {Innes, Michael J.},
@@ -507,7 +507,7 @@
   file = {/home/philipp/Zotero/storage/5DMNKATG/Innes_2018_Flux.pdf}
 }
 
-@article{innes2019differentiable,
+@online{innes2019differentiable,
   title = {A {{Differentiable Programming System}} to {{Bridge Machine Learning}} and {{Scientific Computing}}},
   author = {Innes, Mike and Edelman, Alan and Fischer, Keno and Rackauckas, Chris and Saba, Elliot and Shah, Viral B. and Tebbutt, Will},
   date = {2019-07-17},
@@ -620,7 +620,7 @@
   series = {{{LLVM}} '15}
 }
 
-@article{laue2019equivalence,
+@online{laue2019equivalence,
   title = {On the {{Equivalence}} of {{Forward Mode Automatic Differentiation}} and {{Symbolic Differentiation}}},
   author = {Laue, Soeren},
   date = {2019-05-03},
@@ -659,7 +659,7 @@
   url = {https://llvm.org/docs/LangRef.html}
 }
 
-@article{looks2017deep,
+@online{looks2017deep,
   title = {Deep {{Learning}} with {{Dynamic Computation Graphs}}},
   author = {Looks, Moshe and Herreshoff, Marcello and Hutchins, DeLesley and Norvig, Peter},
   date = {2017-02-07},
@@ -708,7 +708,7 @@
   file = {/home/philipp/Zotero/storage/INQWEZXX/yassad.html}
 }
 
-@article{mansinghka2014venture,
+@online{mansinghka2014venture,
   title = {Venture: A Higher-Order Probabilistic Programming Platform with Programmable Inference},
   shorttitle = {Venture},
   author = {Mansinghka, Vikash and Selsam, Daniel and Perov, Yura},
@@ -803,7 +803,7 @@
   series = {Adaptive Computation and Machine Learning Series}
 }
 
-@article{murray2017delayed,
+@online{murray2017delayed,
   title = {Delayed {{Sampling}} and {{Automatic Rao}}-{{Blackwellization}} of {{Probabilistic Programs}}},
   author = {Murray, Lawrence M. and Lundén, Daniel and Kudlicka, Jan and Broman, David and Schön, Thomas B.},
   date = {2017-08-25},
@@ -815,6 +815,26 @@
   eprinttype = {arxiv},
   file = {/home/philipp/Zotero/storage/3V5B92ZF/Murray et al_2017_Delayed Sampling and Automatic Rao-Blackwellization of Probabilistic Programs.pdf;/home/philipp/Zotero/storage/NZ4NCBYD/1708.html},
   primaryClass = {stat}
+}
+
+@incollection{narayanan2016probabilistic,
+  title = {Probabilistic {{Inference}} by {{Program Transformation}} in {{Hakaru}} ({{System Description}})},
+  booktitle = {Functional and {{Logic Programming}}},
+  author = {Narayanan, Praveen and Carette, Jacques and Romano, Wren and Shan, Chung-chieh and Zinkov, Robert},
+  editor = {Kiselyov, Oleg and King, Andy},
+  date = {2016},
+  volume = {9613},
+  pages = {62--79},
+  publisher = {{Springer International Publishing}},
+  location = {{Cham}},
+  doi = {10.1007/978-3-319-29604-3_5},
+  url = {http://link.springer.com/10.1007/978-3-319-29604-3_5},
+  urldate = {2020-10-02},
+  abstract = {We present Hakaru, a new probabilistic programming system that allows composable reuse of distributions, queries, and inference algorithms, all expressed in a single language of measures. The system implements two automatic and semantics-preserving program transformations—disintegration, which calculates conditional distributions, and simplification, which subsumes exact inference by computer algebra. We show how these features work together by describing the ideal workflow of a Hakaru user on two small problems. We highlight our composition of transformations and types in design and implementation.},
+  file = {/home/philipp/Zotero/storage/YLWJLJYN/Narayanan et al. - 2016 - Probabilistic Inference by Program Transformation .pdf},
+  isbn = {978-3-319-29603-6 978-3-319-29604-3},
+  langid = {english},
+  series = {Lecture {{Notes}} in {{Computer Science}}}
 }
 
 @article{narayanan2020symbolic,
@@ -837,7 +857,7 @@
   pagetotal = {60}
 }
 
-@article{neubig2017dynet,
+@online{neubig2017dynet,
   title = {{{DyNet}}: {{The Dynamic Neural Network Toolkit}}},
   shorttitle = {{{DyNet}}},
   author = {Neubig, Graham and Dyer, Chris and Goldberg, Yoav and Matthews, Austin and Ammar, Waleed and Anastasopoulos, Antonios and Ballesteros, Miguel and Chiang, David and Clothiaux, Daniel and Cohn, Trevor and Duh, Kevin and Faruqui, Manaal and Gan, Cynthia and Garrette, Dan and Ji, Yangfeng and Kong, Lingpeng and Kuncoro, Adhiguna and Kumar, Gaurav and Malaviya, Chaitanya and Michel, Paul and Oda, Yusuke and Richardson, Matthew and Saphra, Naomi and Swayamdipta, Swabha and Yin, Pengcheng},
@@ -950,7 +970,7 @@
   number = {1}
 }
 
-@article{revels2018dynamic,
+@online{revels2018dynamic,
   title = {Dynamic {{Automatic Differentiation}} of {{GPU Broadcast Kernels}}},
   author = {Revels, Jarrett and Besard, Tim and Churavy, Valentin and De Sutter, Bjorn and Vielma, Juan Pablo},
   date = {2018-10-18},
@@ -996,7 +1016,7 @@
   type = {Dissertation}
 }
 
-@article{schulman2016gradient,
+@online{schulman2016gradient,
   title = {Gradient {{Estimation Using Stochastic Computation Graphs}}},
   author = {Schulman, John and Heess, Nicolas and Weber, Theophane and Abbeel, Pieter},
   date = {2016-01-05},
@@ -1099,7 +1119,7 @@
   file = {/home/philipp/Zotero/storage/R873X5Q6/Tokui et al_2015_Chainer.pdf}
 }
 
-@article{tolpin2020stochastically,
+@online{tolpin2020stochastically,
   title = {Stochastically {{Differentiable Probabilistic Programs}}},
   author = {Tolpin, David and Zhou, Yuan and Yang, Hongseok},
   date = {2020-03-05},
@@ -1113,7 +1133,7 @@
   primaryClass = {cs, stat}
 }
 
-@article{vandemeent2018introduction,
+@online{vandemeent2018introduction,
   title = {An {{Introduction}} to {{Probabilistic Programming}}},
   author = {van de Meent, Jan-Willem and Paige, Brooks and Yang, Hongseok and Wood, Frank},
   date = {2018-09-27},
@@ -1129,7 +1149,7 @@
   primaryClass = {cs, stat}
 }
 
-@article{vanmerrienboer2018automatic,
+@online{vanmerrienboer2018automatic,
   title = {Automatic Differentiation in {{ML}}: {{Where}} We Are and Where We Should Be Going},
   shorttitle = {Automatic Differentiation in {{ML}}},
   author = {van Merriënboer, Bart and Breuleux, Olivier and Bergeron, Arnaud and Lamblin, Pascal},
@@ -1180,7 +1200,7 @@
   number = {1–2}
 }
 
-@article{wang2019demystifying,
+@online{wang2019demystifying,
   title = {Demystifying {{Differentiable Programming}}: {{Shift}}/{{Reset}} the {{Penultimate Backpropagator}}},
   shorttitle = {Demystifying {{Differentiable Programming}}},
   author = {Wang, Fei and Zheng, Daniel and Decker, James and Wu, Xilun and Essertel, Grégory M. and Rompf, Tiark},
@@ -1204,6 +1224,15 @@
   file = {/home/philipp/Zotero/storage/5JWKEDM8/4792__Submission 4792.pdf}
 }
 
+@article{wingatelightweight,
+  title = {Lightweight {{Implementations}} of {{Probabilistic Programming Languages Via Transformational Compilation}}},
+  author = {Wingate, David and Stuhlmüller, Andreas and Goodman, Noah D},
+  pages = {9},
+  abstract = {We describe a general method of transforming arbitrary programming languages into probabilistic programming languages with straightforward MCMC inference engines. Random choices in the program are “named” with information about their position in an execution trace; these names are used in conjunction with a database holding values of random variables to implement MCMC inference in the space of execution traces. We encode naming information using lightweight source-to-source compilers. Our method enables us to reuse existing infrastructure (compilers, profilers, etc.) with minimal additional code, implying fast models with low development overhead. We illustrate the technique on two languages, one functional and one imperative: Bher, a compiled version of the Church language which eliminates interpretive overhead of the original MIT-Church implementation, and Stochastic Matlab, a new open-source language.},
+  file = {/home/philipp/Zotero/storage/SXWS5YEA/Wingate et al. - Lightweight Implementations of Probabilistic Progr.pdf},
+  langid = {english}
+}
+
 @article{winn2005variational,
   title = {Variational {{Message Passing}}},
   author = {Winn, John and Bishop, Christopher M.},
@@ -1225,7 +1254,7 @@
   file = {/home/philipp/Zotero/storage/XJFYHQ3H/Winn - Model-Based Machine Learning.pdf;/home/philipp/Zotero/storage/NUVN5MX6/index.html}
 }
 
-@article{wood2015new,
+@online{wood2015new,
   title = {A {{New Approach}} to {{Probabilistic Programming Inference}}},
   author = {Wood, Frank and van de Meent, Jan Willem and Mansinghka, Vikash},
   date = {2015-07-03},
