--- a/thesis/tracking_models.tex
+++ b/thesis/tracking_models.tex
@@ -8,7 +8,7 @@
 \label{sec:jags-style-automatic}
 
 \section{Evaluation}
-\label{sec:evaluation}
+\label{sec:autogibbs-eval}
 
 %%% Local Variables: 
 %%% TeX-master: "main"
